# ZENFLOW

./: .gitignore  AWS_STEP_BY_STEP.md  DEPLOYMENT.md  README.md
yoga_assistant/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  accuracy_calculator.py  auth.py  backend.py  database.py  nlp_processor.py  pose_templates.json  pyproject.toml  requirements.txt  yoga_app.db  yoga_assistant.py
yoga_assistant/YOGA_NOTEBOOK/: YOGA_NN_NOTEBOOK.ipynb  best_yoga_model.keras  col_means.pkl  label_encoder.pkl  scaler.pkl
yoga_assistant/saved_model_dir/: fingerprint.pb  saved_model.pb
yoga_assistant/saved_model_dir/variables/: variables.data-00000-of-00001  variables.index
zenflow_frontend/: index.html  package-lock.json  package.json
zenflow_frontend/src/: App.jsx  FeedbackForm.jsx  index.css
zenflow_frontend/src/components/: AICoach.jsx  Calendar.jsx  Coach.jsx  Dashboard.jsx  ExerciseLibrary.jsx  FloatingParticles.jsx  Header.jsx  Icons.jsx  Journal.jsx  Library.jsx  Navigation.jsx  Practice.jsx  Progress.jsx  SessionHistory.jsx  VideoAnalysis.jsx
